Fix the mobile navbar and some spacing issues

--- a/workbench/static/workbench/main.scss
+++ b/workbench/static/workbench/main.scss
@@ -9,10 +9,10 @@ $h5-font-size: $font-size-base * 1.2;
 $h6-font-size: $font-size-base;
 
 $card-spacer-y: 0.5rem;
-$card-spacer-x: 0.75rem;
+$card-spacer-x: 0.5rem;
 
 $list-group-item-padding-y: 0.5rem;
-$list-group-item-padding-x: 0.75rem;
+$list-group-item-padding-x: 0.5rem;
 
 $font-family-sans-serif: system-ui;
 
